fix spacing of helptopics.jsx, buttons are now equally sized

--- a/carbon-support-page/src/components/HelpTopics.css
+++ b/carbon-support-page/src/components/HelpTopics.css
@@ -10,6 +10,7 @@
     flex-direction: column;
     justify-content: space-between;
     flex: 1;
+    gap: 2px;
     width: 100%;
 }
 
@@ -27,11 +28,11 @@
 .help-popular-content-holder {
     display: flex;
     justify-content: stretch;
-    gap: 3px;
+    gap: 2px;
 }
 
 .help-button {
     display: flex;
-    flex: auto;
+    flex: 1;
 }
 
